<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/header_linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/filters"
            android:textColor="@android:color/black"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/cancel_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="bottom"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/title"
            android:padding="5dp"
            android:text="@string/cancel_all"
            android:textColor="@color/general_color"
            android:textSize="18sp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/close_imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/close_icon"
            android:src="@drawable/ic_close" />

    </RelativeLayout>

    <View
        android:id="@+id/line_view"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:layout_below="@+id/header_linearLayout"
        android:layout_alignParentStart="true"
        android:background="@drawable/line_bg" />

</RelativeLayout>