<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:paddingStart="40dp"
    android:paddingEnd="15dp"
    android:paddingBottom="15dp">

    <include
        android:id="@+id/header"
        layout="@layout/bsd_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/categories_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:text="@string/categories"
        android:textColor="@android:color/black"
        android:textSize="26sp" />

    <RelativeLayout
        android:id="@+id/salty_relative"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/categories_title_textView"
        android:layout_marginStart="10dp">

        <TextView
            android:id="@+id/salty_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/checkbox_salty"
            android:text="@string/salty"
            android:textSize="22sp" />

        <CheckBox
            android:id="@+id/checkbox_salty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sweet_layout"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@id/salty_relative"
        android:layout_marginStart="10dp">

        <TextView
            android:id="@+id/sweet_textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/checkbox_sweet"
            android:text="@string/sweet"
            android:textSize="22sp" />

        <CheckBox
            android:id="@+id/checkbox_sweet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <TextView
        android:id="@+id/ingredients_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sweet_layout"
        android:text="@string/ingredients"
        android:textColor="@android:color/black"
        android:textSize="26sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ingredients_recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ingredients_textView"
        android:layout_marginTop="10dp"
        android:scrollbarSize="5dp"
        android:scrollbars="vertical" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ingredient_filter_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/general_color"
        app:borderWidth="0dp"
        app:srcCompat="@drawable/ic_filter"
        app:tint="@android:color/white"
        android:contentDescription="Filter Fab" />

</RelativeLayout>